--- a/profile.css
+++ b/profile.css
@@ -28,7 +28,7 @@ background-position: right;
 
 #my_photo{
 height: 27vw;
-  background: url(BlackMoh.jpg);
+  background: url(./images/BlackMoh.jpg);
   background-position: center;
   background-size: 100%;
   background-repeat: no-repeat;
@@ -40,7 +40,7 @@ height: 27vw;
 
 
 #right_setion{
-  background: url(laptop1.jpg);
+  background: url(./images/laptop1.jpg);
   background-repeat: no-repeat;
   background-position: cover;
 
@@ -377,7 +377,7 @@ top:1px;
   width: 100%;
   height: 2vw;
   /* display: none; */
-  background:url(back1.jpg);
+  background:url(./images/back1.jpg);
 
   background-repeat: no-repeat;
 
